--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
         Clipboard allows you to track and organize everything you
         copy. Instantly access your clipboard on all your devices.
       </p>
+      <div class="box-btn">
       <button type="submit" class="btn btn--ios">
         Download for iOS
       </button>
       <button type="submit" class="btn btn--mac">
         Download for mac
       </button>
+      </div>
     </section>
     <section class="section-features">
       <div class="intro-box">
@@ -40,7 +42,10 @@
           devices. Our Mac and iOS apps will help you organize everything.</p>
       </div>
       <div class="feature-box">
+        <div>
         <img src="./images/image-computer.png" alt="">
+        </div>
+        <div class="features">
         <div class="box box--one">
           <h3 class="box__heading">Quick Search</h3>
           <p class="text">Easily search your snippets by content, category, web address, application, and more.</p>
@@ -52,6 +57,7 @@
         <div class="box box--three">
           <h3 class="box__heading">Complete History</h3>
           <p class="text">Retrieve any snippets from the first moment you started using the app</p>
+        </div>
         </div>
       </div>
     </section>
@@ -66,9 +72,11 @@
         <h2 class="section__heading">Supercharge your workflow</h3>
           <p class="text">We’ve got the tools to boost your productivity.</p>
       </div>
+      <div class="access">
+      
       <div class="box access--one">
         <img src="./images/icon-blacklist.svg" alt="">
-        <h3 class="box__heading">Create blacklists</h3>
+        <h3 class="box__heading">Create blacklist</h3>
         <p class="text">
           Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
         </p>
@@ -87,6 +95,7 @@
           Quick preview of all snippets on your Clipboard for easy access
         </p>
       </div>
+      </div>
     </section>
     <section class="section-companies">
       <div class="company-logos">
@@ -97,18 +106,20 @@
         <img src="./images/logo-vector-graphics.png" alt="">
       </div>
     </section>
-    <section class="outro-section">
+    <section class="intro-section">
       <h1 class="intro-section__heading">Clipboard for iOS and Mac OS</h1>
-      <p class="text outro-section__text">
+      <p class="text outro-text">
         Available for free on the App Store. Download for Mac or iOS, sync with iCloud
         and you’re ready to start adding to your clipboard.
       </p>
-      <button type="submit" class="btn btn--ios">
-        Download for iOS
-      </button>
-      <button type="submit" class="btn btn--mac">
-        Download for mac
-      </button>
+      <div class="box-btn">
+        <button type="submit" class="btn btn--ios">
+          Download for iOS
+        </button>
+        <button type="submit" class="btn btn--mac">
+          Download for mac
+        </button>
+      </div>
     </section>
   </div>
   <footer>
